welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:16: error: illegal start of simple expression
			)else {
                         ^